icons and admin-cardv1

--- a/src/blocks/admin-index/admin-catalog.pug
+++ b/src/blocks/admin-index/admin-catalog.pug
@@ -11,4 +11,4 @@ section.catalog
                     p.admin-catalog-card-text-info Возраст: 
                         span 5 месяцев
                     .admin-btn-catalog-div
-                        a.admin-btn-catalog-style(href="card.html") Подробнее
+                        a.admin-btn-catalog-style(href="admin-card.html") Подробнее
