--- a/src/admin-card.pug
+++ b/src/admin-card.pug
@@ -3,7 +3,7 @@ html(lang="ru")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        title Админ-панель Приют НН
+        title Редактор карточки животного
         //css
         link(rel="stylesheet" href="./css/styles.min.css")
         //ff
@@ -15,13 +15,9 @@ html(lang="ru")
             include blocks/admin-header
             //end header
             
-            //admin-filters
-            include blocks/admin-index/admin-filters
-            //end admin-filters
-
-            //admin-catalog
-            include blocks/admin-index/admin-catalog
-            //end admin-catalog
+            //admin-card-form
+            include blocks/admin-card/card-form
+            //end admin-card-form
 
             //footer
             include blocks/admin-footer
