--- a/src/blocks/catalog/catalog-cards.pug
+++ b/src/blocks/catalog/catalog-cards.pug
@@ -15,4 +15,6 @@ section.catalog
                         span 5 месяцев
                     .btn-catalog-div
                         a.btn-catalog-style(href="card.html") Подробнее
-                        
+        section.animals-not-found
+            p.animals-not-found-text Таких животных в приюте нет
+            p.animals-not-found-text Попробуйте выбрать другие фильтры
