--- a/src/style/catalog/catalog-cards.sass
+++ b/src/style/catalog/catalog-cards.sass
@@ -45,3 +45,15 @@
             text-decoration: none
             color: #ffffff
             background-color: #fa3e4e
+.animals-not-found
+    margin: 50px 0
+.animals-not-found-text
+    color: $text
+    text-align: center
+    font-style: normal
+    font-weight: 500
+    font-size: 24px
+    line-height: 135%
+.exit-text
+    background-color:#0f667400
+    border: none
