--- a/src/admin-new-card.pug
+++ b/src/admin-new-card.pug
@@ -22,3 +22,4 @@ html(lang="ru")
             //footer
             include blocks/admin-footer
             //end footer
+        script(type="text/javascript" src="js/main.js")
