--- a/src/style/admin-card/admin-card.sass
+++ b/src/style/admin-card/admin-card.sass
@@ -5,6 +5,70 @@
 .admin-animal-card-df
     display: flex
     justify-content: space-between
+    .input__wrapper
+        width: 100%
+        position: relative
+        margin: 15px 0
+        text-align: center
+        .input__file 
+            opacity: 0
+            position: absolute
+            width: 400px
+            height: 350px
+            left: 0px
+            cursor: pointer
+        .input__file-button 
+            width: 400px
+            height: 350px
+            border: 2px solid #6981FF
+            color: $text
+            font-size: 36px
+            display: -webkit-box
+            display: -ms-flexbox
+            -webkit-box-align: center
+                -ms-flex-align: center
+                    align-items: center
+            -webkit-box-pack: start
+                -ms-flex-pack: start
+                    justify-content: flex-start
+            .input__file-button-text
+                margin-left: 70px
+        .input__file-mini
+            opacity: 0
+            position: absolute
+            width: 130px
+            height: 115px
+            left: 20px
+            top: 40px
+            cursor: pointer
+        .input__file-mini-2
+            opacity: 0
+            position: absolute
+            width: 130px
+            height: 115px
+            left: 20px
+            top: 195px
+            cursor: pointer
+        .input__file-button-mini
+            width: 130px
+            height: 115px
+            margin-left: 20px
+            margin-top: 40px
+            border: 2px solid #6981FF
+            font-size: 14px
+            font-weight: 500
+            color: $text
+            display: -webkit-box
+            display: -ms-flexbox
+            -webkit-box-align: center
+                -ms-flex-align: center
+                    align-items: center
+            -webkit-box-pack: start
+                -ms-flex-pack: start
+                    justify-content: flex-start
+            .input__file-button-text-mini
+                margin-left: 10px
+
     .admin-animal-card-fp
         width: 400px
         height: 350px
