--- a/src/blocks/admin-header.pug
+++ b/src/blocks/admin-header.pug
@@ -7,11 +7,11 @@ header.admin-header
                         img(src="images/logo-admin.svg", alt="Логотип Админ-панели Приют НН")
                 ul.nav.navbar-nav.admin-navbar-style
                     li.nav-item
-                        a.nav-link.admin-nav-link-style.p-0(href="catalog.html") Просмотр заявок
+                        a.nav-link.admin-nav-link-style.p-0(href="admin-application.html") Просмотр заявок
                     li.nav-item
-                        a.nav-link.admin-nav-link-style.p-0(href="information.html") Просмотр сообщений
+                        a.nav-link.admin-nav-link-style.p-0(href="admin-msg.html") Просмотр сообщений
                     li.nav-item
-                        a.nav-link.admin-nav-link-style.p-0(href="about.html") Редактор новостей
+                        a.nav-link.admin-nav-link-style.p-0(href="admin-news-edit.html") Редактор новостей
                     li.nav-item
                         a.nav-link.admin-nav-link-style.p-0(href="admin-new-card.html") Новая карточка
                 form(action="obr_exit.php" method="post")
