--- a/src/style/admin-application/admin-app.sass
+++ b/src/style/admin-application/admin-app.sass
@@ -1,8 +1,10 @@
 .admin-app
     border-top: 1px solid $text
+.admin-app-block-style
+    padding-bottom: 10px
 .app-block
     border: 1px solid $text
-    height: 150px
+    height: auto
     position: relative
     margin-bottom: 30px
     .app-count
@@ -44,14 +46,14 @@
 .app-block-info-rc
     margin: auto 0 auto 20px
 .app-btn-block
-    margin-top: 21px
-    margin-right: 20px
+    margin-top: 30px
+    margin-right: 40px
 .admin-card-btn
     margin-left: 10px
     background: #ffffff0
     color: $admin-color
     border: 1px solid $admin-color
-    padding: 15px 50px
+    padding: 10px 50px
     font-style: normal
     font-weight: 500
     font-size: 18px
@@ -65,3 +67,46 @@
         text-decoration: none
 .app-btn-style
     margin: 10px
+.app-story-style
+    width: 350px
+.app-story-btn
+    text-align: center
+    margin: auto 0
+    padding: 14px 20px !important
+    height: 60px !important
+    width: 150px !important
+    &:focus
+        outline: none
+    &:hover
+        color: #ffffff
+        text-decoration: none
+        background-color: #6981FF
+.msg-block-input
+    border: 1px solid #9A9A9A
+    color: $text
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    &:focus
+        outline: none
+.app-btn-block-text
+    color: $text
+    margin: 5px
+    text-align: center
+    font-style: normal
+    font-weight: 500
+    font-size: 13px
+    line-height: 15px
+    text-align: center
+.news-btn-style
+    margin: 10px 20px !important
+    padding: 10px 10px !important
+    width: 150px !important
+    height: 50px !important
+
+
+
+
+
+
+            
