--- a/src/style/admin-card/admin-card.sass
+++ b/src/style/admin-card/admin-card.sass
@@ -5,6 +5,7 @@
 .admin-animal-card-df
     display: flex
     justify-content: space-between
+    position: relative
     .input__wrapper
         width: 100%
         position: relative
@@ -68,7 +69,6 @@
                     justify-content: flex-start
             .input__file-button-text-mini
                 margin-left: 10px
-
     .admin-animal-card-fp
         width: 400px
         height: 350px
