--- a/src/style/admin-card/admin-card.sass
+++ b/src/style/admin-card/admin-card.sass
@@ -17,7 +17,7 @@
             height: 350px
             left: 0px
             cursor: pointer
-        .input__file-button 
+        .input__file-button
             width: 400px
             height: 350px
             border: 2px solid #6981FF
@@ -31,6 +31,7 @@
             -webkit-box-pack: start
                 -ms-flex-pack: start
                     justify-content: flex-start
+
             .input__file-button-text
                 margin-left: 70px
         .input__file-mini
@@ -78,6 +79,7 @@
         margin: 45px 0 0 25px
     .admin-animal-name
         border: 1px solid #9A9A9A
+        margin-left: 20px
         margin-bottom: 15px
         width: 350px
         text-align: center
@@ -155,3 +157,9 @@
         outline: none
     &:hover
         background-color: #fa3e4e
+.preview-img
+    width: 396px
+    height: 346px
+.preview-img1
+    width: 126px
+    height: 111px
