--- a/src/admin-new-card.pug
+++ b/src/admin-new-card.pug
@@ -22,4 +22,4 @@ html(lang="ru")
             //footer
             include blocks/admin-footer
             //end footer
-        script(type="text/javascript" src="js/main.js")
+        script(type="text/javascript" src="js/file-name.js")
