--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -27,3 +27,4 @@
 @import admin-card/admin-card
 @import admin-application/admin-app
 @import admin-msg/admin-msg
+@import admin-add-news/add-news-main
