--- a/src/blocks/admin-application/admin-app.pug
+++ b/src/blocks/admin-application/admin-app.pug
@@ -3,8 +3,8 @@ section.admin-app
         .admin-animal-card-df
             h2.block-head.admin-app-head Просмотр заявок:
             .admin-animal-card-df.app-story-style
-                a.admin-btn.app-story-btn(href="") Одобренные заявки
-                a.admin-btn.app-story-btn(href="") Отклоненные заявки 
+                a.admin-btn.app-story-btn(href="admin-application-approved.html") Одобренные заявки
+                a.admin-btn.app-story-btn(href="admin-application-denied.html") Отклоненные заявки 
         form(action="")
             .app-block
                 .app-count
