--- a/src/style/index.sass
+++ b/src/style/index.sass
@@ -28,3 +28,4 @@
 @import admin-application/admin-app
 @import admin-msg/admin-msg
 @import admin-add-news/add-news-main
+@import admin-application/admin-app-approved
