--- a/src/blocks/admin-news-edit/news-edit.pug
+++ b/src/blocks/admin-news-edit/news-edit.pug
@@ -2,7 +2,7 @@ section.admin-app
     .container
         .admin-animal-card-df
             h2.block-head.admin-app-head Просмотр новостей:
-            a.admin-btn.app-story-btn(href="") Добавление новости
+            a.admin-btn.app-story-btn(href="admin-add-news.html") Добавление новости
         form(action="")
             .app-block
                 .app-count
