--- a/src/style/admin-add-news/add-news-main.sass
+++ b/src/style/admin-add-news/add-news-main.sass
@@ -1,3 +1,5 @@
+.admin-add-news
+    border-top: 1px solid $text
 .admin-add-news-container
     margin-left: 274px
     .admin-add-news-input-title
