--- a/src/blocks/admin-card/card-form.pug
+++ b/src/blocks/admin-card/card-form.pug
@@ -4,10 +4,19 @@ section.admin-animal-card
         form(action="")
             .admin-animal-card-df
                 .admin-animal-card-df.admin-animal-card-style
+                    .input__wrapper
+                        lable
+                            input.input__file(type="file" name="file" id="input__file"  accept="image/*" onchange="getFileParam();")
+                            lable.input__file-button.border-white#preview
                     img.admin-animal-card-fp(src="images/ozik-1.png", alt="Первое фото")
                     .admin-animal-card-block
+                    .input__wrapper
+                        input.input__file-mini(type="file" name="file" id="input__file1" accept="image/*" onchange="getFile1Param();")
+                        lable.input__file-button-mini.border-white#preview1
                         img.admin-animal-card-sp(src="images/ozik-2.png", alt="Второе фото")
-                        img.admin-animal-card-sp(src="images/ozik-3.png", alt="Третье фото")
+                        input.input__file-mini-2(type="file" name="file" id="input__file2" accept="image/*" onchange="getFile2Param();")
+                        lable.input__file-button-mini.border-white#preview2
+                        img.admin-animal-card-sp1(src="images/ozik-3.png", alt="Третье фото")
                 .admin-animal-card-info.admin-animal-card-style
                     input.admin-animal-name(type="text" value="Озик" placeholder="Кличка животного")
                     .admin-animal-card-df
