--- a/src/style/admin-add-news/add-news-main.sass
+++ b/src/style/admin-add-news/add-news-main.sass
@@ -1,17 +1,19 @@
-.admin-add-news-container
-    margin-left: 274px
-    .admin-add-news-input-title
-        width: 592px
-        height: 35px
-        &:focus
-            outline: none
-    .admin-add-news-container-text
-        margin-top: 10px
-        .admin-add-news-input-text
+.admin-add-news
+    border-top: 1px solid $text
+    .admin-add-news-container
+        margin-left: 274px
+        .admin-add-news-input-title
             width: 592px
-            height: 410px
+            height: 35px
             &:focus
                 outline: none
+        .admin-add-news-container-text
+            margin-top: 10px
+            .admin-add-news-input-text
+                width: 592px
+                height: 410px
+                &:focus
+                    outline: none
 .admin-add-news-title
     font-weight: 500
     font-size: 18px
