--- a/src/style/admin-card/admin-card.sass
+++ b/src/style/admin-card/admin-card.sass
@@ -32,9 +32,9 @@
             -webkit-box-pack: start
                 -ms-flex-pack: start
                     justify-content: flex-start
-
             .input__file-button-text
                 margin-left: 70px
+                z-index: -1
         .input__file-mini
             opacity: 0
             position: absolute
@@ -73,10 +73,25 @@
     .admin-animal-card-fp
         width: 400px
         height: 350px
+        z-index: -1
+        position: absolute
+        bottom: 15px
     .admin-animal-card-sp
         width: 120px
         height: 110px
         margin: 45px 0 0 25px
+        z-index: -1
+        position: absolute
+        bottom: 200px
+        left: 0px
+    .admin-animal-card-sp1
+        width: 120px
+        height: 110px
+        margin: 45px 0 0 25px
+        z-index: -1
+        position: absolute
+        bottom: 45px
+        left: 0
     .admin-animal-name
         border: 1px solid #9A9A9A
         margin-left: 20px
